fix: fixed wrong flex align

--- a/sass/input.scss
+++ b/sass/input.scss
@@ -75,6 +75,7 @@ h1, h2{
     padding: 1rem;
     gap: 1rem;
     background-color: $darkerPurple;
+    border-radius: 0.25rem;
 
     div{
         display: flex;
@@ -148,8 +149,7 @@ h1, h2{
 
 #projects{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: column; 
     
     .projectCard{
         background-image: linear-gradient(to right, $darkerPurple, $darkPurple);
